@@ -1,3 +1,11 @@
+* use getaddrinfo and getnameinfo where available
+
+ENet 1.3.13 (April 30, 2015):
+
+* miscellaneous bug fixes
+* added premake and cmake support
+* miscellaneous documentation cleanups
+
 ENet 1.3.12 (April 24, 2014):
 
 * added maximumPacketSize and maximumWaitingData fields to ENetHost to limit the amount of 
